--- a/rute.html
+++ b/rute.html
@@ -48,16 +48,24 @@
         <div class="pilihan-rute">
             <ul>
                 <li class="rute-icon">
-                    <img class="gambar" src="pict/MRT_Jakarta_logo_vertical.png" alt="MRT" srcset="">
+                    <a target="_blank" href="">
+                        <img class="gambar" src="pict/MRT_Jakarta_logo_vertical.png" alt="MRT" srcset="">
+                    </a>
                 </li>
                 <li class="rute-icon">
-                    <img class="gambar" src="pict/krl.jpg" alt="KRL" srcset="">
+                    <a href="" target="_blank">
+                        <img class="gambar" src="pict/krl.jpg" alt="KRL" srcset="">
+                    </a>
                 </li>
                 <li class="rute-icon">
-                    <img class="gambar" src="pict/tj.png" alt="Transjakarta">
+                    <a target="_blank" href="">
+                        <img class="gambar" src="pict/tj.png" alt="Transjakarta">
+                    </a>
                 </li>
                 <li class="rute-icon">
-                    <img class="gambar" src="pict/lrt.png" alt="LRT">
+                    <a target="_blank" href="">
+                        <img class="gambar" src="pict/lrt.png" alt="LRT">
+                    </a>
                 </li>
             </ul>
         </div>
