kmprt malem-malem bikin jantungan aje loe :"

--- a/sejarah.html
+++ b/sejarah.html
@@ -28,7 +28,7 @@
         <div class="navigation-menu-1">
             <ul>
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
-                <li><a href="artikel_sejarah.html" class="link-navigation-1-aktif">Sejarah</a></li>
+                <li><a href="sejarah.html" class="link-navigation-1-aktif">Sejarah</a></li>
                 <li><a href="budaya.html" class="link-navigation-1">Budaya</a></li>
                 <li><a href="wisata.html" class="link-navigation-1">Wisata</a></li>
                 <li><a href="rute.html" class="link-navigation-1">Rute</a></li>
