--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="nav-menu-1">
             <ul>
                 <li><a href="index.html" class="link-nav-1-aktif">Home</a></li>
-                <li><a href="artikel_sejarah.html" class="link-nav-1">Sejarah</a></li>
+                <li><a href="sejarah.html" class="link-nav-1">Sejarah</a></li>
                 <li><a href="budaya.html" class="link-nav-1">Budaya</a></li>
                 <li><a href="wisata.html" class="link-nav-1">Wisata</a></li>
                 <li><a href="rute.html" class="link-nav-1">Rute</a></li>
